--- a/template/css/widget.css
+++ b/template/css/widget.css
@@ -1,6 +1,6 @@
 html, body {
   margin: 0;
-  overflow: hidden;
+  overflow-y: auto;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 #app {
